Changes
=======

All issue numbers are relative to https://github.com/smnorris/bcfishpass/issues

v0.1.dev2 ()
------------------
- add confirmed habitat data (PSE) within CCIRA study (area where it informs access model)
- add confirmed habitat locations from New Graph BULK field reviews
- use confirmed habitat to inform access model (#227)
- note downstream observations in access model output (#290)

v0.1.dev1 (2023-02-10)
------------------
- dev pre-release
- precip/channel width/discharge models confirmed to build on fresh database
- linear habitat model confirmed to build on fresh database

v0.1.dev0 (2023-02-09)
------------------
- dev pre-release
- access model build is successful on clean database
- habitat models builds are untested on clean database, likely non-functional