@@ -11,7 +11,7 @@ CREATE TABLE bcfishpass.modelled_stream_crossings_temp
   modelled_crossing_type character varying(5),
   modelled_crossing_type_source text[],
   transport_line_id integer,
-  ften_road_section_lines_id text,
+  ften_road_section_lines_id integer,
   og_road_segment_permit_id integer,
   og_petrlm_dev_rd_pre06_pub_id integer,
   railway_track_id integer,
